# NebulaSpecKit

./: .gitignore  .lycheeignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  GUIDE.md  Guide-Started.md  LICENSE  README.md  Update.md  instructions.md
.github/: dependabot.yml
CLI/: README.md  RELEASE.md  contrato.yaml  plan.md  pyproject.toml  tasks.md
CLI/src/nebu_cli/: __init__.py  __main__.py
CLI/src/nebu_cli/commands/: start.py  submit.py  update.py  version.py
CLI/src/nebu_cli/core/: fs.py  manifest.py
CLI/src/nebu_cli/specs/: structure.py
CLI/tests/: conftest.py  test_main.py  test_start.py  test_update.py  test_version.py
Docs/: README.md  architecture.md  brief.md  ci-cd.md  commands.md  context-baseline.md  contract.yaml  control.md  deploy.md  design-system.md  efficiency-improvements.md  entities.md  flow.md  get-started.md  pages.md  plan.md  project.md  stack.md  structure.md  tasks.md  user-stories.md
Manual/: 00README.md  01GUIDE.md  02AGENTS.md  03NO-AGENTS.md  04COMPONENTS.md  05SCENARIOS-AGENTS.md  06SCENARIOS-NO-AGENTS.md  07CREATE-AGENT-GITHUB-COPILOT.md  08CREATE-AGENT-CURSOR.md  09CREATE-AGENT-ANTIGRAVITY.md  10CREATE-AGENT-WINDSURF.md  11CREATE-AGENT-TRAE.md  12CREATE-AGENT-CLAUDE-CODE.md  13CREATE-AGENT-OPEN-CODE.md  14CREATE-AGENT-ZED.md  15CREATE-AGENT-BASELINE.md  16SCENARIOS-BASELINE.md  17EXECUTION-BASELINE.md  18COMPONENTS-BASELINE.md  19COMPONENTS-SKILLS.md  20COMPONENTS-WORKFLOWS.md  21COMPONENTS-QUALITY.md  22COMPONENTS-TEMPLATES.md  Agents.md  Cli.md  Execution.md  Fluxo.md  GitClone.md  NoAgents.md  Prototipagem.md  (+5 more)
(+162 files in other folders)
